# ray-tracing-weekend-cuda

./: .clang-format  CMakeLists.txt  main.cu
.github/workflows/: cuda-build.yml
include/: png_writer.h
src/: main.cu
src/base/: camera.h  color.cu  color.cuh  color.h  image.cu  image.cuh  image.h  integrator.h  material.h  png_writer.cuh  png_writer.h  point3.cu  point3.cuh  point3.h  ray.cuh  ray.h  shape.h  sphere.h  util.h  vector3.cu  vector3.cuh  vector3.h  world.h
src/cameras/: perspective_camera.h
src/integrators/: path.h
src/shapes/: sphere.h
